--- a/src/pages/Clock/index.module.scss
+++ b/src/pages/Clock/index.module.scss
@@ -1,3 +1,8 @@
-.clock {
-    color: aquamarine;
+.body {
+    font-family: 'Heebo', sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
 }
