feat:add FaqCollapse page!

--- a/src/pages/DrinkWater/index.module.scss
+++ b/src/pages/DrinkWater/index.module.scss
@@ -11,7 +11,7 @@ $fillColor: #6ab3f8;
     flex-direction: column;
     align-items: center;
     margin-bottom: 40px;
-    padding: 8px;
+    // padding: 8px;
     height: 100vh;
 
     h1 {
